--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,6 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 		implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.0'
 
 		implementation 'org.apache.httpcomponents:httpcore:4.4.15'
@@ -44,7 +43,11 @@ subprojects {
 		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-		compileOnly 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+		implementation platform('software.amazon.awssdk:bom:2.17.230')
+		implementation 'software.amazon.awssdk:s3'
+
+		implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
 
 	}
 }
@@ -53,6 +56,8 @@ project(':dataportal-datastore') {
 	dependencies {
 		implementation 'com.opencsv:opencsv:5.6'
 		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+		implementation 'org.apache.poi:poi:4.1.2'
+		implementation 'org.apache.poi:poi-ooxml:4.1.2'
 	}
 }
 
@@ -62,6 +67,7 @@ project(':dataportal-web') {
 		implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 		implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 		implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
 	}
 }
 
