--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,10 @@ subprojects {
 
 		implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
+		implementation 'javax.mail:mail:1.4.7'
+		implementation 'org.springframework:spring-context-support:5.3.9'
 
+		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	}
 }
 
