--- a/build.gradle
+++ b/build.gradle
@@ -47,18 +47,18 @@ subprojects {
 		implementation 'software.amazon.awssdk:s3'
 
 		implementation 'org.springframework.boot:spring-boot-starter-webflux'
+		implementation 'org.springframework.boot:spring-boot-starter-security'
 
-		implementation 'javax.mail:mail:1.4.7'
-		implementation 'org.springframework:spring-context-support:5.3.9'
 	}
 }
 
 project(':dataportal-datastore') {
 	dependencies {
-		implementation 'com.opencsv:opencsv:5.6'
+		implementation 'com.opencsv:opencsv:5.7.1'
 		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 		implementation 'org.apache.poi:poi:4.1.2'
-		implementation 'org.apache.poi:poi-ooxml:4.1.2'
+		implementation 'org.apache.poi:poi-ooxml:5.1.0'
+		implementation(project(':dataportal-web'))
 	}
 }
 
@@ -67,10 +67,11 @@ project(':dataportal-web') {
 		implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 		implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 		implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-		implementation 'org.springframework.boot:spring-boot-starter-security'
 		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 		runtimeOnly 'com.mysql:mysql-connector-j'
-	}
+
+		implementation 'javax.mail:mail:1.4.7'
+		implementation 'org.springframework:spring-context-support:5.3.9'}
 }
 
 
