--- a/build.gradle
+++ b/build.gradle
@@ -4,15 +4,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-java {
-	sourceCompatibility = '17'
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
-	}
-}
+bootJar.enabled = false
 
 subprojects {
 	apply plugin: 'java'
@@ -20,12 +12,19 @@ subprojects {
 	version '3.1.5'
 	apply plugin: 'io.spring.dependency-management'
 	version '1.1.3'
+	sourceCompatibility = '17'
 
 	group  'com.hanyang'
 	version  '0.0.1-SNAPSHOT'
 
 	repositories {
 		mavenCentral()
+	}
+
+	configurations {
+		compileOnly {
+			extendsFrom annotationProcessor
+		}
 	}
 
 	dependencies {
@@ -51,30 +50,7 @@ subprojects {
 
 	}
 }
-
-project(':dataportal-datastore') {
-	dependencies {
-		implementation 'com.opencsv:opencsv:5.7.1'
-		implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-		implementation 'org.apache.poi:poi:4.1.2'
-		implementation 'org.apache.poi:poi-ooxml:5.1.0'
-		implementation(project(':dataportal-web'))
-	}
+tasks.named('test').configure {
+	enabled = false
 }
 
-project(':dataportal-web') {
-	dependencies {
-		implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
-		implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
-		implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-		runtimeOnly 'com.mysql:mysql-connector-j'
-
-		implementation 'javax.mail:mail:1.4.7'
-		implementation 'org.springframework:spring-context-support:5.3.9'}
-}
-
-
-tasks.named('test') {
-	useJUnitPlatform()
-}
