--- a/dataportal-datastore/build.gradle
+++ b/dataportal-datastore/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'org.springframework.boot' version '3.1.5'
+    id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'com.hanyang'
@@ -14,6 +16,18 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.opencsv:opencsv:5.7.1'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.apache.poi:poi:4.1.2'
+    implementation 'org.apache.poi:poi-ooxml:5.1.0'
+    implementation(project(':dataportal-web'))
+}
+bootJar {
+    enabled = false
+}
+
+jar {
+    enabled = true
 }
 
 tasks.named('test') {
