--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ subprojects {
 		implementation 'org.springframework.boot:spring-boot-starter-webflux'
 		implementation 'org.springframework.boot:spring-boot-starter-security'
 
+		implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+		implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+		implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
 	}
 }
 tasks.named('test').configure {
