chore: datastore Dockerfile 작성

--- a/dataportal-datastore/Dockerfile
+++ b/dataportal-datastore/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17
 ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} web.jar
-EXPOSE 8080
-ENTRYPOINT ["java","-jar","web.jar"]
+COPY ${JAR_FILE} datastore.jar
+EXPOSE 8000
+ENTRYPOINT ["java","-jar","datastore.jar"]
