--- a/dataportal-datastore/Dockerfile
+++ b/dataportal-datastore/Dockerfile
@@ -2,4 +2,5 @@ FROM openjdk:17
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} datastore.jar
 EXPOSE 8000
-ENTRYPOINT ["java","-jar","datastore.jar"]
+ENV SPRING_PROFILE=prod
+ENTRYPOINT ["java","-jar","-Dspring.profiles.active=${SPRING_PROFILE}","datastore.jar"]
