--- a/dataportal-web/Dockerfile
+++ b/dataportal-web/Dockerfile
@@ -2,4 +2,5 @@ FROM openjdk:17
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} web.jar
 EXPOSE 8080
-ENTRYPOINT ["java","-jar","web.jar"]
+ENV SPRING_PROFILE=prod
+ENTRYPOINT ["java","-jar","-Dspring.profiles.active=${SPRING_PROFILE}","web.jar"]
