--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,6 @@ subprojects {
 		implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 
 		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
-		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 		implementation platform('software.amazon.awssdk:bom:2.17.230')
 		implementation 'software.amazon.awssdk:s3'
@@ -51,6 +50,10 @@ subprojects {
 		implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 		implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 		implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+
+		testImplementation 'org.springframework.boot:spring-boot-starter-test'
+		testImplementation 'com.h2database:h2'
+
 	}
 }
 tasks.named('test').configure {
