--- a/dataportal-web/build.gradle
+++ b/dataportal-web/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.1.5'
     id 'io.spring.dependency-management' version '1.1.3'
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.hanyang'
@@ -21,7 +22,40 @@ dependencies {
 
     implementation 'javax.mail:mail:1.4.7'
     implementation 'org.springframework:spring-context-support:5.3.9'
+
+    implementation "com.querydsl:querydsl-jpa:5.0.0:jakarta"
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
+
+def generated = 'src/main/generated'
+
+querydsl {
+    jpa = true
+    querydslSourcesDir = generated
+}
+sourceSets {
+    main.java.srcDir generated
+}
+
+compileQuerydsl{
+    options.annotationProcessorPath = configurations.querydsl
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+    querydsl.extendsFrom compileClasspath
+}
+
+tasks.compileQuerydsl.dependsOn(clean);
+
+compileQuerydsl{
+    options.annotationProcessorPath = configurations.querydsl
+}
+
 bootJar {
     enabled = true
 }
