--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,7 @@ HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
-!**/src/main/generated/
-
+generated/
 application-dev.yml
 application-prod.yml
 
@@ -18,8 +15,7 @@ application-prod.yml
 .springBeans
 .sts4-cache
 bin/
-!**/src/main/**/bin/
-!**/src/test/**/bin/
+
 
 ### IntelliJ IDEA ###
 .idea
