--- a/dataportal-web/src/test/resources/application-test.yml
+++ b/dataportal-web/src/test/resources/application-test.yml
@@ -8,6 +8,18 @@ spring:
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
+    database-platform: org.hibernate.dialect.MySQL57Dialect
+    properties:
+      hibernate:
+        format_sql: true
+        jdbc:
+          lob:
+            non_contextual_creation: true
+        connection:
+          CharSet: utf8dataset
+          useUnicode: true
+          characterEncoding: utf-8
+        default_batch_fetch_size: 100
     hibernate:
       ddl-auto: create-drop
 
