--- a/dataportal-web/build.gradle
+++ b/dataportal-web/build.gradle
@@ -27,6 +27,8 @@ dependencies {
     annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    implementation "com.googlecode.json-simple:json-simple:1.1.1"
 }
 
 def generated = 'src/main/generated'
