--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,7 @@ subprojects {
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		testImplementation 'com.h2database:h2'
 
+		implementation "com.googlecode.json-simple:json-simple:1.1.1"
 	}
 }
 tasks.named('test').configure {
