--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -27,8 +27,8 @@ jobs:
     - name: gradle 셋업
       uses: gradle/actions/setup-gradle@417ae3ccd767c252f5661f1ace9f835f9654f2b5 # v3.1.0
 
+    - name: gradlew 권한 설정
+      run: chmod +x gradlew
+
     - name: 빌드 확인
       run: ./gradlew build
-
-    - name: 테스트코드 동작 확인
-      run: ./gradlew test
