--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,16 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.3'
 }
 
-bootJar.enabled = false
+repositories {
+	mavenCentral()
+}
+
+bootJar {
+	enabled = false
+}
+jar {
+	enabled = true
+}
 
 subprojects {
 	apply plugin: 'java'
@@ -16,16 +25,6 @@ subprojects {
 
 	group  'com.hanyang'
 	version  '0.0.1-SNAPSHOT'
-
-	repositories {
-		mavenCentral()
-	}
-
-	configurations {
-		compileOnly {
-			extendsFrom annotationProcessor
-		}
-	}
 
 	dependencies {
 		implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -50,16 +49,22 @@ subprojects {
 		implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 		implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
 		implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+		implementation "com.googlecode.json-simple:json-simple:1.1.1"
 
 		testImplementation 'org.springframework.boot:spring-boot-starter-test'
 		testImplementation 'com.h2database:h2'
 
-		implementation "com.googlecode.json-simple:json-simple:1.1.1"
-
-		implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
+		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 	}
-}
-tasks.named('test').configure {
-	enabled = false
+
+	repositories {
+		mavenCentral()
+	}
+
+	test {
+		useJUnitPlatform()
+		systemProperty "spring.profiles.active", "test"
+	}
 }
 
