--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -58,6 +58,7 @@ jobs:
         port: 22
         script: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker stop $(docker ps -a -q)
           docker rm $(docker ps -a -q)
           docker rmi ${{ secrets.DOCKER_USERNAME }}/web:latest
           docker pull ${{ secrets.DOCKER_USERNAME }}/web:latest
