--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,7 +37,7 @@ jobs:
       run : |
         cd ./dataportal-web/src/main/resources
         touch application-prod.yml
-        echo "${{secrets.WEB_APPLICATION}}" > application-prod.yml
+        echo "${{secrets.WEB_APPLICATION}}" | base64 --decode > application-prod.yml
       shell: bash
 
     - name: Docker set up
