--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,7 +33,7 @@ jobs:
     - name: application.yml 생성
       run : |
         touch dataportal-web/src/main/resources/application-prod.yml
-        echo "${{secrets.WEB_APPLICATION}}" | base64 --decode > dataportal-web/src/main/resources/application-prod.yml
+        echo "${{secrets.WEB_APPLICATION}}" > dataportal-web/src/main/resources/application-prod.yml
       shell: bash
 
     - name: Docker set up
