--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -2,7 +2,9 @@ name: CI
 
 on:
   pull_request:
-    branches: [ "main" ]
+    branches: [ "dev" ]
+  push:
+    branches: [ "dev" ]
     
 jobs:
   build:
@@ -25,37 +27,10 @@ jobs:
     - name: gradlew 권한 설정
       run: chmod +x gradlew
 
-    - name: application.yml 생성
-      run: |
-        cd ./dataportal-web/src/main/resources
-        touch ./application-prod.yml
-        echo "${{ secrets.APPLICATION }}" > ./application-prod.yml
-      shell: bash
-
     - name: 빌드 확인
       run: ./gradlew build
 
-    - name: Docker set up
-      uses: docker/setup-buildx-action@v1
 
-    - name: Docker 이미지 빌드
-      run: |
-         docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-         docker build -t ${{ secrets.DOCKER_USERNAME }}/web:latest ./dataportal-web 
-         docker push ${{ secrets.DOCKER_USERNAME }}/web:latest
 
-    - name: 배포
-      uses: appleboy/ssh-action@v0.1.8
-      with:
-        host: ${{secrets.AWS_HOST}}
-        username: ubuntu
-        key: ${{secrets.AWS_KEY}}
-        port: 22
-        script: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker stop $(docker ps -a -q)
-          docker rm $(docker ps -a -q)
-          docker rmi ${{ secrets.DOCKER_USERNAME }}/web:latest
-          docker-compose up -d
 
 
