--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,11 +25,18 @@ jobs:
       - name: gradlew 권한 설정
         run: chmod +x gradlew
 
-      - name: application.yml 생성
+      - name: dataportal application.yml 생성
         run: |
           cd ./dataportal-web/src/main/resources
           touch ./application-prod.yml
-          echo "${{ secrets.APPLICATION }}" > ./application-prod.yml
+          echo "${{ secrets.APPLICATION_WEB }}" > ./application-prod.yml
+        shell: bash
+
+      - name: datastore application.yml 생성
+        run: |
+          cd ./dataportal-store/src/main/resources
+          touch ./application-prod.yml
+          echo "${{ secrets.APPLICATION_DATASTORE }}" > ./application-prod.yml
         shell: bash
 
       - name: 빌드 확인
