--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -61,7 +61,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{secrets.AWS_HOST}}
-          username: ubuntu
+          username: ec2-user
           key: ${{secrets.AWS_KEY}}
           port: 22
           script: |
