--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,8 @@ subprojects {
 
 		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
 		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
+		testImplementation("org.springframework.security:spring-security-test")
 	}
 
 	repositories {
