--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,15 @@ services:
       - redis
     networks:
       - my_network
+    logging:
+      driver: awslogs
+      options:
+        awslogs-group: "dataportal"
+        awslogs-region: "ap-northeast-2"
+        awslogs-stream: "web"
 
   dataportal_datastore:
-    container_name: dataportal-datestore
+    container_name: dataportal-datastore
     image: choco22/datastore
     ports:
       - "8081:8081"
@@ -30,6 +36,12 @@ services:
       - redis
     networks:
       - my_network
+    logging:
+      driver: awslogs
+      options:
+        awslogs-group: "dataportal"
+        awslogs-region: "ap-northeast-2"
+        awslogs-stream: "datastore"
 
 networks:
   my_network:
