--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,9 @@ subprojects {
 
 		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
 		testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
+
+		implementation 'org.flywaydb:flyway-core'
+		implementation "org.flywaydb:flyway-mysql"
 	}
 
 	repositories {
