fix:test flyway 미적용 되도록 변경

--- a/dataportal-web/src/test/resources/application-test.yml
+++ b/dataportal-web/src/test/resources/application-test.yml
@@ -20,6 +20,9 @@ spring:
       repositories:
         enabled: false
 
+  flyway:
+    enabled: false
+
 jwt:
   secret: VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
   expire:
